--- a/SENL/Metodos Cerrados/Falsa Posicion/backup/FalsaPosicion.lpi
+++ b/SENL/Metodos Cerrados/Falsa Posicion/backup/FalsaPosicion.lpi
@@ -22,12 +22,15 @@
         <FormatVersion Value="1"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="1">
+    <RequiredPackages Count="2">
       <Item1>
-        <PackageName Value="LCL"/>
+        <PackageName Value="TAChartLazarusPkg"/>
       </Item1>
+      <Item2>
+        <PackageName Value="LCL"/>
+      </Item2>
     </RequiredPackages>
-    <Units Count="2">
+    <Units Count="3">
       <Unit0>
         <Filename Value="FalsaPosicion.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -39,6 +42,11 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit1>
+      <Unit2>
+        <Filename Value="parsemath.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="ParseMath"/>
+      </Unit2>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
