--- a/Polinomios de Lagrange/backup/Lagrange.lpi
+++ b/Polinomios de Lagrange/backup/Lagrange.lpi
@@ -11,9 +11,6 @@
       <UseXPManifest Value="True"/>
       <Icon Value="0"/>
     </General>
-    <VersionInfo>
-      <StringTable ProductVersion=""/>
-    </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
     </BuildModes>
@@ -25,12 +22,15 @@
         <FormatVersion Value="1"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="1">
+    <RequiredPackages Count="2">
       <Item1>
-        <PackageName Value="LCL"/>
+        <PackageName Value="TAChartLazarusPkg"/>
       </Item1>
+      <Item2>
+        <PackageName Value="LCL"/>
+      </Item2>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="4">
       <Unit0>
         <Filename Value="Lagrange.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -39,6 +39,7 @@
         <Filename Value="main.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="Form1"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit1>
       <Unit2>
@@ -46,6 +47,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="ParseMath"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="funcs.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="Funcs"/>
+      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -67,7 +73,7 @@
     </Linking>
   </CompilerOptions>
   <Debugging>
-    <Exceptions Count="3">
+    <Exceptions Count="5">
       <Item1>
         <Name Value="EAbort"/>
       </Item1>
@@ -77,6 +83,12 @@
       <Item3>
         <Name Value="EFOpenError"/>
       </Item3>
+      <Item4>
+        <Name Value="EGridException"/>
+      </Item4>
+      <Item5>
+        <Name Value="EExprParser"/>
+      </Item5>
     </Exceptions>
   </Debugging>
 </CONFIG>
